- Divide and Conquer Patterns - Publish-Subscribe Patterns
Signed-off-by: chavp <my.parinya@gmail.com>

--- a/HelloWorldServer/packages/repositories.config
+++ b/HelloWorldServer/packages/repositories.config
@@ -2,4 +2,9 @@
 <repositories>
   <repository path="..\HelloWorldClient\packages.config" />
   <repository path="..\HelloWorldServer\packages.config" />
+  <repository path="..\TaskSink\packages.config" />
+  <repository path="..\TaskVent\packages.config" />
+  <repository path="..\TaskWork\packages.config" />
+  <repository path="..\TicksPubClient\packages.config" />
+  <repository path="..\TicksPubServer\packages.config" />
 </repositories>
